Customized layout and weather widget to show 7 days forcast.
Tweaked UI layout and colors.

Fixed unit tests

--- a/src/sass/_panels.scss
+++ b/src/sass/_panels.scss
@@ -242,7 +242,7 @@
 }
 
 // Wide screen desktop
-@media (min-width: $screen-wide-min) {
+@media (min-width: $screen-wd-min) {
   .panel {
     .panel-heading {
       font-size: 24px;
