--- a/src/widgets/Text/components/Text.scss
+++ b/src/widgets/Text/components/Text.scss
@@ -43,7 +43,7 @@
 }
 
 // Wide screen desktop
-@media (min-width: $screen-wide-min) {
+@media (min-width: $screen-wd-min) {
   .Text {
     font-size: 22px;
 
