--- a/src/containers/WidgetList/WidgetList.scss
+++ b/src/containers/WidgetList/WidgetList.scss
@@ -1,4 +1,6 @@
+@import "bootstrap/mixins";
 @import "variables";
+@import "mixin/grid";
 
 .WidgetList {
   margin: $space-small;
@@ -7,5 +9,31 @@
 @media (min-width: $screen-md-min) {
   .WidgetList {
     margin: $space-large;
+  }
+}
+
+.widget {
+  @include make-xs-column(12);
+  @include make-sm-column(6);
+  @include make-md-column(3);
+  @include make-xw-column(2.4);
+
+  &.history-widget {
+    @include make-xs-column(12);
+  }
+
+  &.weather {
+    @include make-md-column(6);
+    @include make-xw-column(4.8);
+  }
+
+  &.finance {
+    @include make-md-column(6);
+    @include make-xw-column(4.8);
+  }
+
+  &.jiraSummary {
+    @include make-md-column(6);
+    @include make-xw-column(4.8);
   }
 }
